--- a/console.html
+++ b/console.html
@@ -12,7 +12,6 @@
 <script src="js/video/software.js"></script>
 <script src="js/irq.js"></script>
 <script src="js/keypad.js"></script>
-<script src="js/sio.js"></script>
 <script src="js/savedata.js"></script>
 <script src="js/gpio.js"></script>
 <script src="js/gba.js"></script>
@@ -23,7 +22,7 @@
 <script>
 function runTest(r) {
 	core.setRom(r);
-	core.DEBUG("ROM loaded: " + core.rom.title + " [" + core.rom.code + "] (" + r.byteLength + " bytes)");
+	gbaCon.log("ROM loaded: " + core.rom.title + " [" + core.rom.code + "] (" + r.byteLength + " bytes)");
 	gbaCon.memory.refreshAll();
 }
 
@@ -43,24 +42,7 @@ function screenshot() {
 	window.open(canvas.toDataURL('image/png'), 'screenshot');
 };
 
-function savestate() {
-	gbaCon.pause();
-	var state = core.freeze();
-	Serializer.serializePNG(Serializer.serialize(state), document.getElementById('screen'), function(url) {
-		var img = document.getElementById('saveState');
-		img.setAttribute('src', url);
-	});
-};
-
-function loadSavestate(state) {
-	Serializer.deserializePNG(state, function (result) {
-		core.defrost(result);
-		core.DEBUG('Loaded state');
-	});
-}
-
 var core = new GameBoyAdvance();
-setLogLevel(core.LOG_DEBUG, true);
 var rom = null;
 
 var gbaCon;
@@ -70,8 +52,8 @@ window.onload = function() {
 	core.setCanvas(canvas);
 
 	gbaCon = new Console(core);
-	core.DEBUG("Logging begun!");
-	core.DEBUG("Loading BIOS...");
+	gbaCon.log("Logging begun!");
+	gbaCon.log("Loading BIOS...");
 	loadRom('resources/bios.bin', function(bios) {
 		core.setBios(bios, false);
 		core.DEBUG("BIOS loaded!");
@@ -88,10 +70,8 @@ window.onload = function() {
 			<label><input type="checkbox" checked onclick="setLogLevel(core.LOG_WARN, this.checked)">WARN</label>
 			<label><input type="checkbox" onclick="setLogLevel(core.LOG_STUB, this.checked)">STUB</label>
 			<label><input type="checkbox" onclick="setLogLevel(core.LOG_INFO, this.checked)">INFO</label>
-			<label><input type="checkbox" checked onclick="setLogLevel(core.LOG_DEBUG, this.checked)">DEBUG</label>
 		</div>
 		<ul id="console"></ul>
-		<img id="saveState">
 	</section>
 	<section id="main">
 		<section id="display">
@@ -114,9 +94,6 @@ window.onload = function() {
 			<button onclick="core.downloadSavedata()">Download savedata</button>
 			<button onclick="core.storeSavedata()">Store savedata</button>
 			<button onclick="screenshot()">Take screenshot</button>
-			<button onclick="savestate()">Freeze</button>
-			<input type="file" id="uploadSavestate" onchange="loadSavestate(this.files[0])" style="display: none">
-			<button onclick="document.getElementById('uploadSavestate').click()">Defrost</button>
 		</section>
 		<section id="registers">
 			<div>
