--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ Các trò chơi phải không được nén, vì vậy hãy giải nén chúng n
 	</p>
 </section>
 <aside id="moreinfo">
-	<div id="rollover">More Info</div>
+	<div id="rollover">Thông tin thêm</div>
 	<header>
 		<h1>GBA.js</h1>
 		<h2>Game Boy Advance trong trình duyệt</h2>
